# mlx-audio

./: .gitignore  CONTRIBUTIONS.md  MANIFEST.in  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: python-publish.yml  tests.yml
examples/: medasr_transcribe.py  qwen3_asr_transcription.py  streaming_transcription.py
mlx_audio/: __init__.py  audio_io.py  convert.py  dsp.py  server.py  utils.py
mlx_audio/codec/models/dacvae/: __init__.py  codec.py
mlx_audio/codec/models/descript/: base.py
mlx_audio/codec/models/mimi/: mimi.py
mlx_audio/codec/models/s3/: __init__.py  model.py  model_v2.py  utils.py
mlx_audio/codec/models/snac/: attention.py  snac.py  vq.py
mlx_audio/codec/models/vocos/: __init__.py  vocos.py
mlx_audio/sts/: __init__.py  voice_pipeline.py
mlx_audio/sts/models/: __init__.py
mlx_audio/sts/models/lfm_audio/: README.md  __init__.py  config.py  conformer.py  detokenizer.py  model.py  processor.py  transformer.py
mlx_audio/sts/models/mossformer2_se/: README.md  __init__.py  computation_block.py  config.py  convmodule.py  depthwise_conv1d_kernel.py  ffconvm.py  flash_attention_kernels.py  flash_sharea_ffconvm.py  gated_fsmn.py  gated_fsmn_block.py  globallayernorm.py  model.py  mossformer2_se_wrapper.py  mossformer_masknet.py  mossformerblock.py  mossformerblock_gfsmn.py  mossformerm.py  mossformerm2.py  offsetscale.py  scaledsinuembedding.py  scalenorm.py  unideepfsmn.py
mlx_audio/sts/models/sam_audio/: README.md  __init__.py  align.py  config.py  model.py  patcher.py  processor.py  rope.py  text_encoder.py  transformer.py
mlx_audio/sts/tests/: test_lfm_audio.py  test_mossformer2_se.py  test_sam_audio.py  test_voice_pipeline.py
mlx_audio/stt/: generate.py  utils.py
mlx_audio/stt/models/: __init__.py  base.py
mlx_audio/stt/models/glmasr/: __init__.py  config.py  glmasr.py
mlx_audio/stt/models/lasr_ctc/: __init__.py  config.py  lasr.py
mlx_audio/stt/models/parakeet/: __init__.py  parakeet.py
mlx_audio/stt/models/qwen3_asr/: qwen3_asr.py  qwen3_forced_aligner.py
mlx_audio/stt/models/qwen3_forced_aligner/: __init__.py
mlx_audio/stt/models/vibevoice_asr/: __init__.py  audio_encoder.py  config.py  vibevoice_asr.py
mlx_audio/stt/models/voxtral/: config.py  voxtral.py
mlx_audio/stt/models/voxtral_realtime/: __init__.py  audio.py  config.py  decoder.py  encoder.py  tokenizer.py  voxtral_realtime.py
mlx_audio/stt/models/wav2vec/: wav2vec.py
mlx_audio/stt/models/whisper/: __init__.py  (+5 more)
mlx_audio/stt/tests/: test_lasr_ctc.py  test_models.py
mlx_audio/tests/: test_dsp.py  test_lazy_imports.py  test_optional_deps.py  test_server.py
mlx_audio/tts/: generate.py  utils.py
mlx_audio/tts/models/: base.py
mlx_audio/tts/tests/: test_convert.py  test_models.py  test_qwen3_tts.py  test_voxcpm.py  test_voxcpm_integration.py
mlx_audio/ui/components/: layout-wrapper.tsx  sidebar.tsx
mlx_audio/vad/: __init__.py  utils.py
mlx_audio/vad/models/: __init__.py
mlx_audio/vad/tests/: test_sortformer.py
(+124 files in other folders)
